export all utils

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "poker-utils",
   "version": "1.0.0",
   "description": "NLHE",
+  "author": "Conrad Kay",
   "main": "build/main/index.js",
-  "typings": "build/main/index.d.ts",
   "module": "build/module/index.js",
   "repository": "https://github.com/YOUR_GITHUB_USER_NAME/y",
   "license": "MIT",
