--- a/package.json
+++ b/package.json
@@ -46,27 +46,27 @@
     "prange": "^0.2.3"
   },
   "devDependencies": {
-    "@ava/typescript": "^1.1.1",
+    "@ava/typescript": "^5.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/node": "^20.14.9",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
-    "ava": "^3.12.1",
+    "ava": "^6.1.3",
     "codecov": "^3.5.0",
     "cspell": "^4.1.0",
-    "eslint": "^7.8.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
     "gh-pages": "^3.1.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
+    "nyc": "^17.0.0",
     "open-cli": "^6.0.1",
-    "prettier": "^2.1.1",
-    "standard-version": "^9.0.0",
-    "ts-node": "^9.0.0",
-    "typedoc": "^0.19.0",
-    "typescript": "^4.0.2"
+    "prettier": "^3.3.2",
+    "standard-version": "^9.5.0",
+    "ts-node": "^10.9.2",
+    "typedoc": "^0.26.2",
+    "typescript": "^5.5.2"
   },
   "files": [
     "build/main",
@@ -78,17 +78,13 @@
     "README.md"
   ],
   "ava": {
-    "failFast": true,
-    "timeout": "60s",
-    "typescript": {
-      "rewritePaths": {
-        "src/": "build/main/"
-      }
-    },
-    "files": [
-      "!build/module/**"
-    ]
-  },
+		"typescript": {
+			"rewritePaths": {
+				"src/": "build/main/"
+			},
+			"compile": "tsc"
+		}
+	},
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "exclude": [
