--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
       "error",
       { "allowWholeFile": true }
     ],
-    "eslint-comments/no-unused-disable": "error"
+    "eslint-comments/no-unused-disable": "error",
+    "@typescript-eslint/no-non-null-assertion": "off"
   }
 }
