--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poker-utils",
-  "version": "6.0.0",
+  "version": "6.0.1",
   "description": "NLHE",
   "author": "Conrad Kay",
   "main": "build/main/index.js",
@@ -14,17 +14,15 @@
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "test": "nyc --silent ava",
-    "check-cli": "run-s test diff-integration-tests check-integration-tests",
     "watch:build": "tsc -p tsconfig.json -w",
-    "watch:test": "nyc --silent ava --watch",
-    "cov": "run-s build test:unit cov:html cov:lcov && open-cli coverage/index.html",
-    "version": "standard-version"
+    "watch:test": "nyc --silent ava --watch"
   },
   "engines": {
     "node": ">=10"
   },
   "dependencies": {
     "lodash": "^4.17.21",
+    "npm-run-all": "^4.1.5",
     "pdetail": "^0.4.1",
     "prange": "^0.2.3"
   },
@@ -32,24 +30,13 @@
     "@ava/typescript": "^5.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/node": "^20.14.9",
-    "@typescript-eslint/eslint-plugin": "^4.0.1",
-    "@typescript-eslint/parser": "^4.0.1",
     "ava": "^6.1.3",
-    "codecov": "^3.5.0",
-    "cspell": "^4.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "gh-pages": "^3.1.0",
-    "npm-run-all": "^4.1.5",
-    "nyc": "^17.0.0",
-    "open-cli": "^6.0.1",
-    "prettier": "^3.3.2",
-    "standard-version": "^9.5.0",
+    "nyc": "^17.1.0",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "typedoc": "^0.26.2",
-    "typescript": "^5.5.2"
+    "typescript": "^5.6.2"
   },
   "files": [
     "build/main",
