--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "poker-utils",
-  "version": "9.0.0",
+  "name": "rfphe",
+  "version": "1.0.0",
   "description": "NLHE",
   "author": "Conrad Kay",
   "main": "build/main/index.js",
@@ -13,7 +13,7 @@
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "test": "nyc --silent ava",
+    "test": "npx tsx --test './src/tests/*.ts'",
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "nyc --silent ava --watch"
   },
@@ -21,24 +21,23 @@
     "node": ">=10"
   },
   "dependencies": {
-    "@types/lodash": "^4.17.10",
-    "benchmarkify": "^4.0.0",
-    "lodash": "^4.17.21",
-    "npm-run-all": "^4.1.5",
     "pdetail": "^0.4.1",
-    "prange": "^0.2.3",
-    "tsx": "^4.19.2"
+    "phe": "^0.6.0",
+    "prange": "^0.2.3"
   },
   "devDependencies": {
     "@ava/typescript": "^5.0.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20.14.9",
-    "ava": "^6.1.3",
+    "benchmarkify": "^4.0.0",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "npm-run-all": "^4.1.5",
     "nyc": "^17.1.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.2"
   },
   "files": [
