--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "test": "npx tsx --test './src/tests/*.ts'",
+    "test": "tsx --test ./src/tests/*.ts",
     "watch:build": "tsc -p tsconfig.json -w",
     "watch:test": "nyc --silent ava --watch"
   },
