--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "build": "run-p build:*",
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
-    "test": "tsx --test ./src/tests/*.ts",
     "watch:build": "tsc -p tsconfig.json -w",
-    "watch:test": "nyc --silent ava --watch"
+    "test": "tsx --test ./src/tests/*.ts",
+    "test:watch": "tsx watch --test ./src/tests/*.ts"
   },
   "engines": {
     "node": ">=10"
