--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:main": "tsc -p tsconfig.json",
     "build:module": "tsc -p tsconfig.module.json",
     "watch:build": "tsc -p tsconfig.json -w",
+    "bench": "tsx src/benchmarks/runall.ts",
     "test": "tsx --test ./src/tests/*.ts",
     "test:watch": "tsx watch --test ./src/tests/*.ts"
   },
