--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "poker-utils",
-  "version": "10.1.3",
-  "description": "NLHE",
+  "version": "11.0.0",
+  "description": "Fast poker ranges, evaluation, equity calculation",
   "author": "Conrad Kay",
   "main": "build/module/index.js",
   "types": "build/module/index.d.ts",
@@ -13,26 +13,22 @@
   "scripts": {
     "build": "run-p build:*",
     "build:module": "tsc -p tsconfig.module.json",
-    "bench": "tsx src/benchmarks/runall.ts",
+    "bench": "tsx --expose-gc src/benchmarks/benchmark.ts",
+    "bench:markdown": "tsx --expose-gc src/benchmarks/benchmark.ts -md",
     "test": "tsx --test ./src/tests/*.ts",
     "test:watch": "tsx watch --test ./src/tests/*.ts"
   },
   "engines": {
     "node": ">=10"
   },
-  "dependencies": {
-    "pdetail": "^0.4.1",
-    "phe": "^0.6.0",
-    "prange": "^0.2.3"
-  },
   "devDependencies": {
-    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/lodash": "^4.17.10",
     "@types/node": "^20.14.9",
-    "benchmarkify": "^4.0.0",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "mitata": "^1.0.34",
     "npm-run-all": "^4.1.5",
+    "phe": "^0.6.0",
     "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
@@ -41,7 +37,7 @@
   "files": [
     "build/main",
     "build/module",
-    "!**/*.spec.*",
+    "!**/*.test.*",
     "!**/*.json",
     "CHANGELOG.md",
     "LICENSE",
