--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poker-utils",
-  "version": "11.0.8",
+  "version": "11.0.9",
   "description": "Fast poker ranges, evaluation, equity calculation",
   "author": "Conrad Kay",
   "main": "build/module/index.js",
@@ -11,6 +11,7 @@
   "keywords": [],
   "type": "module",
   "scripts": {
+    "publish": "semver -i patch",
     "build": "run-p build:*",
     "build:module": "tsc -p tsconfig.module.json",
     "bench": "tsx --expose-gc src/benchmarks/benchmark.ts",
@@ -30,6 +31,7 @@
     "npm-run-all": "^4.1.5",
     "phe": "^0.6.0",
     "prettier": "^3.3.3",
+    "semver": "^7.7.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
     "typescript": "^5.6.2"
@@ -42,5 +44,8 @@
     "CHANGELOG.md",
     "LICENSE",
     "README.md"
-  ]
+  ],
+  "dependencies": {
+    "import-sync": "^2.2.3"
+  }
 }
