--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,17 +4,16 @@
     "outDir": "build/main",
     "rootDir": "src",
     "baseUrl": "src",
-    "moduleResolution": "node",
-    "module": "commonJS",
+    "moduleResolution": "node16",
+    "module": "Node16",
     "declaration": true,
-    "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
-    "resolveJsonModule": true /* Include modules imported with .json extension. */,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    /* Debugging Options */
-    "listFiles": false /* Print names of files part of the compilation. */,
     "pretty": true,
     "lib": [
       "es2023"
