--- a/tsconfig.module.json
+++ b/tsconfig.module.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "target": "esnext",
     "outDir": "build/module",
-    "module": "esnext"
+    "module": "Node16"
   },
   "exclude": [
     "node_modules/**",
