--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "poker-utils",
-  "version": "11.1.5",
+  "name": "poker-utls",
+  "version": "11.1.6",
   "description": "Fast poker ranges, evaluation, equity calculation",
   "author": "Conrad Kay",
   "main": "build/module/index.js",
