--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "poker-utls",
-  "version": "11.1.6",
+  "name": "poker-utils",
+  "version": "11.1.7",
   "description": "Fast poker ranges, evaluation, equity calculation",
   "author": "Conrad Kay",
   "main": "build/module/index.js",
@@ -45,6 +45,7 @@
     "README.md"
   ],
   "dependencies": {
+    "bitset": "^5.2.3",
     "import-sync": "^2.2.3"
   }
 }
