--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poker-utils",
-  "version": "11.1.8",
+  "version": "12.0.0",
   "description": "Fast poker ranges, evaluation, equity calculation",
   "author": "Conrad Kay",
   "main": "build/module/index.js",
@@ -14,7 +14,7 @@
     "build": "run-p build:*",
     "build:module": "tsc -p tsconfig.module.json",
     "bench": "tsx --expose-gc src/benchmarks/benchmark.ts",
-    "bench:markdown": "tsx --expose-gc src/benchmarks/benchmark.ts -md",
+    "bench:readme": "tsx --expose-gc src/benchmarks/benchmark.ts -md",
     "test": "tsx --test ./src/tests/*.ts",
     "test:watch": "tsx watch --test ./src/tests/*.ts"
   },
@@ -43,9 +43,5 @@
     "CHANGELOG.md",
     "LICENSE",
     "README.md"
-  ],
-  "dependencies": {
-    "bitset": "^5.2.3",
-    "import-sync": "^2.2.3"
-  }
+  ]
 }
