--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "target": "ES2017",
     "baseUrl": ".",
     "outDir": "build/main",
-    "moduleResolution": "node16",
-    "module": "Node16",
+    "moduleResolution": "node",
+    "module": "CommonJS",
     "declaration": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
