--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,20 +14,11 @@
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "pretty": true,
-    "lib": [
-      "es2023"
-    ],
+    "lib": ["es2023"],
     "paths": {
-      "typeRoots": [
-        "node_modules/@types",
-        "src/types"
-      ]
-    },
+      "typeRoots": ["node_modules/@types", "src/types"]
+    }
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules/**"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules/**"]
 }
