--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poker-utils",
-  "version": "13.1.7",
+  "version": "13.1.9",
   "description": "Fast poker ranges, evaluation, equity calculation",
   "author": "Conrad Kay",
   "main": "build/module/index.js",
@@ -28,6 +28,7 @@
     "mitata": "^1.0.34",
     "npm-run-all": "^4.1.5",
     "phe": "^0.6.0",
+    "poker-wasm": "^1.1.2",
     "prettier": "^3.3.3",
     "semver": "^7.7.1",
     "ts-node": "^10.9.2",
